# contacts-api-warp-postgres

./: .env  Cargo.toml  Makefile  README.md  api_users.json  docker-compose.yaml
migrations/: 20230412093334_contacts_table.up.sql
src/: main.rs
src/api/: contacts_handlers.rs  contacts_routes.rs  mod.rs
src/handlers/: contacts_handlers.rs  mod.rs
src/middleware/: auth.rs  validation.rs
src/models/: contact.rs  errors.rs  mod.rs
src/repositories/: contacts_db_repository.rs  contacts_in_memory_repository.rs  contacts_repository.rs  mod.rs
src/repository/: contacts_db_repository.rs  contacts_repository.rs  mod.rs
src/routes/: contacts_routes.rs  mod.rs
