[package]
name = "contacts-api-warp-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
tokio = { version = "1.27.0", features = ["full"] }