[package]
name = "contacts-api-warp-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.3"
reqwest = "0.11.16"
reqwest-retry = "0.2.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3.4"